--- a/index.html
+++ b/index.html
@@ -8,10 +8,6 @@
 </head>
 <body>
     <h1>Rock Paper Scissors</h1>
-    <script>
-    
-    
-
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
