--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Rock Paper Scissors</h1>
-    <script src="script.js"></script>
+    <script src="testing.js"></script>
 </body>
 </html>
