add RPS selection images#

--- a/index.html
+++ b/index.html
@@ -2,12 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jan, Ken, Pon! (Rock Paper Scissors, in Japanese)</title>
 </head>
 <body>
-    <h1>Rock Paper Scissors</h1>
+    <h1 class="h1title">Jan, Ken, Pon!</h1>
+
+<div class="selectionPanel">
+    <img class="selectionPanelButton" id="rock" src="rock.png">
+    <img class="selectionPanelButton" id="scissors" src="scissors.png">
+    <img class="selectionPanelButton" id="paper" src="paper.png">
+</div>
     <script src="script.js"></script>
 </body>
 </html>
