new icons, new styles

--- a/index.html
+++ b/index.html
@@ -8,12 +8,22 @@
     <title>Jan, Ken, Pon! (Rock Paper Scissors, in Japanese)</title>
 </head>
 <body>
-    <h1 class="h1title">Jan, Ken, Pon!</h1>
+    <h1 class="h1Title">Jan, Ken, Pon!</h1>
 
 <div class="selectionPanel">
-    <img class="selectionPanelButton" id="rock" src="rock.png">
-    <img class="selectionPanelButton" id="scissors" src="scissors.png">
-    <img class="selectionPanelButton" id="paper" src="paper.png">
+    <img class="selectionPanelButton" id="rock" src="rock.svg">
+    <img class="selectionPanelButton" id="scissors" src="scissors.svg">
+    <img class="selectionPanelButton" id="paper" src="paper.svg">
+</div>
+<div class="results">
+    <h3 id="youchose">You chose... </h3>
+    <h3>A.I. chose... x!</h3>
+    <h3>The result is... x!</h3>
+</div>
+<div class="scores">
+    <h3>Total rounds: x</h3>
+    <h3>Your score: x</h3>
+    <h3>A.I. score: x</h3>
 </div>
     <script src="script.js"></script>
 </body>
