DOM logging done, needs styling

--- a/index.html
+++ b/index.html
@@ -16,14 +16,15 @@
     <img class="selectionPanelButton" id="paper" src="paper.svg">
 </div>
 <div class="results">
-    <h3 id="youchose">You chose... </h3>
-    <h3>A.I. chose... x!</h3>
-    <h3>The result is... x!</h3>
+    <h3 id="youChose">You chose... </h3>
+    <h3 id="aiChose">A.I. chose... </h3>
+    <h3 id="resultDOM">The result is... </h3>
 </div>
+<!-- <img id="trio" src="trio.svg"> -->
 <div class="scores">
-    <h3>Total rounds: x</h3>
-    <h3>Your score: x</h3>
-    <h3>A.I. score: x</h3>
+    <h3 id="totalRounds">Total rounds so far: </h3>
+    <h3 id="yourScore">Your score: </h3>
+    <h3 id="aiScore">A.I. score: </h3>
 </div>
     <script src="script.js"></script>
 </body>
