add hover and click effects

--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Archivo">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jan, Ken, Pon! (Rock Paper Scissors, in Japanese)</title>
+    <title>Rock, Paper, Scissors</title>
 </head>
 <body>
-    <h1>Jan, Ken, Pon!</h1>
+    <h1>Rock, Paper, Scissors</h1>
 
 <div class="selectionPanel">
-    <img class="selectionPanelButton" id="rock" src="rock.svg">
-    <img class="selectionPanelButton" id="scissors" src="scissors.svg">
-    <img class="selectionPanelButton" id="paper" src="paper.svg">
-</div>
+    <img class="selectionPanelButton click" id="rock" src="rock.svg">
+    <img class="selectionPanelButton click" id="paper" src="paper.svg">
+    <img class="selectionPanelButton click" id="scissors" src="scissors.svg">
+    </div>
 <div class="results">
     <table>
     <tr>
