--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </table>
 </div>
 <div id="trioDiv"><img id="trio" src="trio.svg"></div>
-<div id="matchComplete"><h3>Match complete! You </h3></div>
+<div id="matchRevealDiv"><h3>Match complete! You <div id="matchReveal"></div></h3></div>
 <div class="scores">
     <table>
     <tr>
