--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Rock, Paper, Scissors</title>
 </head>
 <body>
-    <h1>Rock, Paper, Scissors!</h1>
+    <h1>Rock, Paper, Scissors</h1>
 
 <div class="selectionPanel">
     <img class="selectionPanelButton click" id="rock" src="rock.svg">
